# obake.py

./: .travis.yml  CMakeLists.txt  README.md  YACMAPythonSetup.cmake  _version.py.in  azure-pipelines.yml
.circleci/: config.yml
obake/: CMakeLists.txt  __init__.py  _version.py.in  core.cpp  docstrings.cpp  docstrings.hpp  expose_polynomials.cpp  expose_polynomials_double.cpp  expose_polynomials_integer.cpp  expose_polynomials_rational.cpp  expose_polynomials_real.cpp  expose_polynomials_real128.cpp  expose_power_series.cpp  expose_power_series_double.cpp  expose_power_series_rational.cpp  expose_power_series_real.cpp  expose_power_series_real128.cpp  polynomials.hpp  power_series.hpp  test.py  type_system.cpp  type_system.hpp  utils.cpp  utils.hpp
src/: core.cpp  expose_polynomials.cpp  expose_polynomials_double.cpp  expose_polynomials_integer.cpp  expose_polynomials_rational.cpp  expose_polynomials_real.cpp  expose_polynomials_real128.cpp  polynomials.hpp  type_system.cpp  type_system.hpp  utils.cpp  utils.hpp
tools/: circleci_bionic_gcc7_conda.sh  circleci_bionic_py27_conda.sh  circleci_bionic_py37_conda.sh  circleci_bionic_py38_conda.sh  travis_osx.sh  travis_osx_py.sh
